Grammer Suggestions Wrapping Issue Fix

--- a/Inc/assets/css/isq-utility-styles.css
+++ b/Inc/assets/css/isq-utility-styles.css
@@ -398,6 +398,7 @@ width: 100%;
     display: flex !important;
     gap: 5px;
     margin-top: 10px;
+    flex-wrap: wrap;
 }
 .g-error-replacements span{
     display: block;
